add some photos

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
     <head>
         <title>Photos</title>
         <link rel="stylesheet" href="node_modules/photoswipe/dist/photoswipe.css"> 
-        <link rel="stylesheet" href="node_modules/photoswipe/dist/default-skin/default-skin.css"> 
-
+        <link rel="stylesheet" href="node_modules/photoswipe/dist/default-skin/default-skin.css">
+        <link rel="stylesheet" href="css/main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     </head>
     <body>
         <!-- GENERATED LISTS -->
@@ -78,7 +79,14 @@
             </div>
 
         </div>
-    
+
+        <div id='title-bar'>
+            Some Random Photos
+        </div>
+        <div id='gallery-container'></div>
+        <div id='footer'>
+            Copyright 2019 @ Ethan Hunter
+        </div>
         <script src='scripts/main.js'></script>
     </body>
 </html>
