move references out of oddly included node_modules dir

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <title>Photos</title>
-        <link rel="stylesheet" href="node_modules/photoswipe/dist/photoswipe.css"> 
-        <link rel="stylesheet" href="node_modules/photoswipe/dist/default-skin/default-skin.css">
+        <link rel="stylesheet" href="css/photoswipe.css"> 
+        <link rel="stylesheet" href="css/default-skin.css">
         <link rel="stylesheet" href="css/main.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     </head>
@@ -11,8 +11,8 @@
         <script src="scripts/photo_list.js"></script>
         <script src="scripts/thumbnail_list.js"></script>
         <!-- END GENERATED LISTS -->
-        <script src="node_modules/photoswipe/dist/photoswipe.min.js"></script> 
-        <script src="node_modules/photoswipe/dist/photoswipe-ui-default.min.js"></script> 
+        <script src="scripts/photoswipe.min.js"></script> 
+        <script src="scripts/photoswipe-ui-default.min.js"></script> 
         <!-- Root element of PhotoSwipe. Must have class pswp. -->
         <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
 
